patterns/core/TeaserGrid/teaserGrid.styl
$breakpoint-small = 550px
$breakpoint-medium = 950px
$breakpoint-large = 1200px
$breakpoint-huge = 1400px

.teaser-grid
  padding 1.2rem 1.5rem

  @media (min-width $breakpoint-small)
    display grid
    grid-gap 1.8rem 1.2rem
    grid-template-areas \
      "top-right top-right" \
      "left bottom-right" \
      "left bottom-right" \
      "middle middle"
    grid-template-columns repeat(2, 1fr)

  @media (min-width $breakpoint-medium)
    grid-gap 1.8rem 2rem
    grid-template-areas \
      "top-right top-right top-right" \
      "left bottom-right bottom-right" \
      "left middle middle"
    grid-template-columns repeat(3, 1fr)
    grid-template-rows repeat(3, 36rem)

  @media (min-width $breakpoint-large)
    grid-template-columns repeat(4, 1fr)
    grid-template-rows repeat(2, 36rem)
    grid-template-areas \
      "left top-right top-right top-right" \
      "left middle middle bottom-right" \

  @media (min-width $breakpoint-huge)
    padding 1.2rem 2rem

.teaser-grid__tile
  display block
  position relative

  & + &
    margin-top 1.8rem

    @media (min-width $breakpoint-small)
      // reset here since we switch to CSS-Grid with gaps now
      margin-top 0

  picture
    display flex
    height 100%

    img
      width 100%
      object-fit cover

  .heading
    display inline-block
    margin-bottom 0.6rem

    @media (min-width $breakpoint-small)
      margin-bottom 1.2rem

.teaser-grid__content
  display flex
  flex-direction column
  align-items flex-start
  background var(--grid-teaser-overlay-background-opaque-default)
  padding 1.2rem 1.5rem 1.8rem

  button
    align-self flex-end


.teaser-grid__tile--top-right
  grid-area top-right

  picture
    height 18rem

  @media (min-width $breakpoint-small)
    height 36rem

    picture
      height 100% // reset fixed height

    .teaser-grid__content
      justify-content flex-end
      position absolute
      top 0
      bottom 0
      left 0
      max-width 25.8rem

  @media (min-width $breakpoint-medium)

    .teaser-grid__content
      max-width 29rem

  @media (min-width $breakpoint-huge)

    .teaser-grid__content
      max-width 32.5rem


.teaser-grid__tile--left
  grid-area left
  height 50.4rem

  .teaser-grid__content
    position absolute
    bottom 0

  @media (min-width $breakpoint-small)
    height 62.4rem

  @media (min-width $breakpoint-medium)
    height 100%

    .teaser-grid__content
      min-height 36rem
      justify-content flex-end

.teaser-grid__tile--bottom-right
  grid-area bottom-right
  height 30rem

  .teaser-grid__content
    justify-content flex-end
    position absolute
    top 0
    bottom 0
    left 0
    right 0

  @media (min-width $breakpoint-small)
    height 62.4rem
    display flex
    flex-direction column
    justify-content flex-end

    .teaser-grid__content
      height 100%
      position relative
      order -1

    picture
      height 31.2rem

  @media (min-width $breakpoint-medium)
    display block
    height 100%

    .teaser-grid__content
      position absolute
      top 0
      bottom 0
      right 0
      left 0

    picture
      height 100%


.teaser-grid__tile--middle
  grid-area middle

  picture
    height 18rem

  @media (min-width $breakpoint-small)
    height 36rem

    picture
      height 100% // reset fixed height

    .teaser-grid__content
      justify-content flex-end
      position absolute
      top 0
      bottom 0
      right 0
      max-width 25.8rem

  @media (min-width $breakpoint-medium)

    .teaser-grid__content
      max-width 29rem

  @media (min-width $breakpoint-huge)

    .teaser-grid__content
      max-width 32.5rem


.teaser-grid--inverted
  color var(--neutral-10)

  .teaser-grid__content
    background var(--grid-teaser-overlay-background-opaque-inverted)

